--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -116,7 +116,7 @@ msgstr "Статус успешно создан"
 
 #: statuses/translations.py:10
 msgid "Status deleted successfully"
-msgstr "Статус успешно удален"
+msgstr "Статус успешно удалён"
 
 #: statuses/translations.py:11
 msgid "Status updated successfully"
